--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,11 +9,14 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==45.0.5
 defusedxml==0.7.1
-Django==3.2
+Django==3.2.4
 django-filter==23.1
 django-templated-mail==1.1.1
+django_debug_toolbar==3.8.1
 djangorestframework==3.12.4
 djoser==2.1.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 idna==3.10
 iniconfig==2.1.0
 itypes==1.2.0
@@ -40,5 +43,6 @@ social-auth-core==4.7.0
 sqlparse==0.5.3
 toml==0.10.2
 typing_extensions==4.14.0
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==1.26.20
