--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ django-filter==23.1
 django-templated-mail==1.1.1
 django_debug_toolbar==3.8.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.7.0
 filetype==1.2.0
@@ -35,6 +36,7 @@ pytest-pythonpath==0.7.3
 python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2025.2
+reportlab==4.4.3
 requests==2.26.0
 requests-oauthlib==2.0.0
 six==1.17.0
