Add github actions

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,13 @@ exclude =
     tests/,
     */migrations/,
     data/
-    venv/,
-    env/,
+     venv/,
+    */venv/,
+    env/
+    */env/,
     docs/,
     frontend/,
     infra/
+    manage.py
 per-file-ignores =
     */settings.py:E501
