--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,8 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==45.0.5
 defusedxml==0.7.1
-Django==3.2.4
+Django==3.2.16
+django-cors-headers==3.13.0
 django-filter==23.1
 django-templated-mail==1.1.1
 django_debug_toolbar==3.8.1
@@ -18,17 +19,23 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-extra-fields==3.7.0
 filetype==1.2.0
+gunicorn==20.1.0
 idna==3.10
 iniconfig==2.1.0
+isort==5.13.2
 itypes==1.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mccabe==0.7.0
 oauthlib==3.3.1
 packaging==25.0
 Pillow==9.3.0
 pluggy==1.0.0.dev0
+psycopg2-binary==2.9.3
 py==1.11.0
+pycodestyle==2.10.0
 pycparser==2.22
+pyflakes==3.0.1
 PyJWT==2.10.1
 pytest==6.2.4
 pytest-django==4.4.0
@@ -36,6 +43,7 @@ pytest-pythonpath==0.7.3
 python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2025.2
+PyYAML==6.0
 reportlab==4.4.3
 requests==2.26.0
 requests-oauthlib==2.0.0
