--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,7 @@
 volumes:
   pg_data:
-  static:
+  backend_static:
+  frontend_static:
   media:
 
 services:
@@ -13,7 +14,7 @@ services:
     image: alekseyemv/foodgram_backend
     env_file: .env
     volumes:
-      - static:/backend_static
+      - backend_static:/backend_static
       - media:/media
     depends_on:
       - db
@@ -22,13 +23,14 @@ services:
     image: alekseyemv/foodgram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static
+      - frontend_static:/frontend_static
   gateway:
     image: alekseyemv/foodgram_gateway
     ports:
       - 8000:80
     volumes:
-      - static:/staticfiles/
+      - backend_static:/staticfiles
+      - frontend_static:/frontend_static
       - media:/media
     depends_on:
       - backend
