--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -144,5 +144,4 @@ jobs:
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/staticfiles/. /backend_static/
-
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/staticfiles/. /backend_static/static/
