--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ iniconfig==2.1.0
 isort==5.13.2
 itypes==1.2.0
 Jinja2==3.1.6
+MarkupSafe==3.0.2
 mccabe==0.7.0
 oauthlib==3.3.1
 packaging==25.0
@@ -35,6 +36,7 @@ py==1.11.0
 pycodestyle==2.10.0
 pycparser==2.22
 pyflakes==3.0.1
+PyJWT==2.10.1
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
@@ -46,8 +48,12 @@ reportlab==4.4.3
 requests==2.26.0
 requests-oauthlib==2.0.0
 six==1.17.0
+social-auth-app-django==4.0.0
+social-auth-core==4.7.0
 sqlparse==0.5.3
 toml==0.10.2
+typing_extensions==4.15.0
 tzdata==2025.2
+Unidecode==1.4.0
 uritemplate==4.2.0
 urllib3==1.26.20
